<resources>
    <string name="app_name"> </string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="lodging">Hotels and Lodgings</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="Schools">Places of learning</string>
    <string name="bus_stataion">Bus Station</string>
    <string name="resturant">Restaurants</string>
    <string name="city_hall">City Halls and Event Centers</string>
    <string name="museum">Museums</string>
    <string name="police">Police</string>
    <string name="atms">ATM</string>


    <string name="slider"></string>
    <string name="Network">Network not available</string>
</resources>
